--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "env-cmd": "^10.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image-crop": "^9.0.5",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "react-uuid": "^1.0.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
