--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,5 @@
 REACT_APP_BASE_URL = "http://localhost:3005/v1/"
 REACT_APP_URL_PATH_EXPLORE = "explore/"
+REACT_APP_URL_PATH_UPLOAD = "upload/"
+REACT_APP_URL_PATH_UPLOAD_EXPLORE = "explore/"
 REACT_APP_URL_PATH_USER_LOGIN = "user/login/"
