--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "react-uuid": "^1.0.2",
+    "sweetalert2": "^11.2.1",
+    "sweetalert2-react-content": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.3.0"
   }
 }
