add profile page show image , show infomation (incomplete)

--- a/.env.dev
+++ b/.env.dev
@@ -3,3 +3,4 @@ REACT_APP_URL_PATH_EXPLORE = "explore/"
 REACT_APP_URL_PATH_UPLOAD = "upload/"
 REACT_APP_URL_PATH_UPLOAD_EXPLORE = "explore/"
 REACT_APP_URL_PATH_USER_LOGIN = "user/login/"
+REACT_APP_URL_PATH_USER_BY_ME = "user/me/"
