complete change password , complete edit profile

--- a/.env.dev
+++ b/.env.dev
@@ -4,3 +4,6 @@ REACT_APP_URL_PATH_UPLOAD = "upload/"
 REACT_APP_URL_PATH_UPLOAD_EXPLORE = "explore/"
 REACT_APP_URL_PATH_USER_LOGIN = "user/login/"
 REACT_APP_URL_PATH_USER_BY_ME = "user/me/"
+REACT_APP_URL_PATH_PATCH_USER = "user/"
+REACT_APP_URL_PATH_CHANGE_PASSWORD = "user/change-password"
+
