add create flight page

--- a/.env.dev
+++ b/.env.dev
@@ -6,4 +6,7 @@ REACT_APP_URL_PATH_USER_LOGIN = "user/login/"
 REACT_APP_URL_PATH_USER_BY_ME = "user/me/"
 REACT_APP_URL_PATH_PATCH_USER = "user/"
 REACT_APP_URL_PATH_CHANGE_PASSWORD = "user/change-password"
-
+REACT_APP_URL_PATH_FLIGHT = "flight/"
+REACT_APP_URL_PATH_AIRLINE = "airline/"
+REACT_APP_URL_PATH_PLANE = "plane/"
+REACT_APP_URL_PATH_AIRPORT = "airport/"
