add planelist , plancreate , ticketlist , search ticket

--- a/.env.dev
+++ b/.env.dev
@@ -10,3 +10,5 @@ REACT_APP_URL_PATH_FLIGHT = "flight/"
 REACT_APP_URL_PATH_AIRLINE = "airline/"
 REACT_APP_URL_PATH_PLANE = "plane/"
 REACT_APP_URL_PATH_AIRPORT = "airport/"
+REACT_APP_URL_PATH_UPLOAD_PLANE = "plane/"
+REACT_APP_URL_PATH_TICKET = "ticket/"
